--- a/create_Readme/create_Readme_script.ipynb
+++ b/create_Readme/create_Readme_script.ipynb
@@ -84,17 +84,6 @@
         "# The base URL is always fixed, no need to ask the user\n",
         "base_url = \"https://dataverse.csuc.cat/\"\n",
         "\n",
-        "# Define the languages of the Readme\n",
-        "allowed_languages = ['english', 'spanish', 'catalan']\n",
-        "\n",
-        "while True:\n",
-        "    lang = input(\"Please enter the language (English, Spanish, or Catalan): \").lower()\n",
-        "    if lang in allowed_languages:\n",
-        "        break\n",
-        "    else:\n",
-        "        print(\"Invalid input. Please enter one of: English, Spanish, or Catalan.\")\n",
-        "\n",
-        "print(f\"You selected: {lang}\")\n",
         "\n",
         "# You can now initialize the Dataverse API using the provided details\n",
         "from pyDataverse.api import NativeApi\n",
@@ -1152,58 +1141,78 @@
         "            f.write('\\t'+translate_key('File format', lang, dict_type='title')+': '+filemetadata_values[i][filemetadata_keys[i].index('contentType')]+'\\n\\n')\n",
         "        print('The Readme has been created in the directory ' + path +'.')\n",
         "\n",
-        "# Checking if both inputs are provided\n",
-        "if not doi or not token:\n",
-        "    print(\"Please enter DOI, Token and URL of the repository correctly.\")\n",
-        "else:\n",
+        "# User input widgets\n",
+        "lang_dropdown = widgets.Dropdown(\n",
+        "    options=['English', 'Spanish', 'Catalan'],\n",
+        "    description='Language:',\n",
+        "    style={'description_width': 'initial'}\n",
+        ")\n",
+        "\n",
+        "confirm_button = widgets.Button(description='Confirm Language and Run')\n",
+        "\n",
+        "# Function to run when confirm button is clicked\n",
+        "def on_confirm_clicked(b):\n",
+        "    clear_output(wait=True)\n",
+        "    lang = lang_dropdown.value.lower()\n",
+        "    print(f'You selected: {lang}')\n",
+        "\n",
+        "    # Now run the rest of your code here:\n",
+        "\n",
+        "    if not doi or not token:\n",
+        "        print(\"Please enter DOI, Token and URL of the repository correctly.\")\n",
+        "        return  # Stop here\n",
+        "\n",
+        "    # Example rest of your logic:\n",
         "    api = NativeApi(base_url, token)\n",
         "    dataset = api.get_dataset(doi)\n",
         "\n",
-        "    #  Metadata lists:\n",
-        "    citation_keys, geo_keys, social_keys, astronomy_keys, biomedical_keys, journal_keys, computationalworkflow_keys, LocalContextsCVoc_keys, darwincore_keys  = [[] for _ in range(9)]\n",
+        "    # Metadata lists\n",
+        "    citation_keys, geo_keys, social_keys, astronomy_keys, biomedical_keys, journal_keys, computationalworkflow_keys, LocalContextsCVoc_keys, darwincore_keys = [[] for _ in range(9)]\n",
         "    citation_values, geo_values, social_values, astronomy_values, biomedical_values, journal_values, computationalworkflow_values, LocalContextsCVoc_values, darwincore_values = [[] for _ in range(9)]\n",
-        "    filemetadata_keys=[]\n",
-        "    filemetadata_values=[]\n",
+        "    filemetadata_keys = []\n",
+        "    filemetadata_values = []\n",
         "\n",
-        "    # Exporting metadata and creating readme\n",
+        "    # Export metadata\n",
         "    exportmetadata(base_url, token, doi, citation_keys, citation_values, geo_keys, geo_values, social_keys,\n",
-        "                      social_values, astronomy_keys, astronomy_values, biomedical_keys, biomedical_values,\n",
-        "                      journal_keys, journal_values,computationalworkflow_keys, computationalworkflow_values,\n",
-        "                      LocalContextsCVoc_keys, LocalContextsCVoc_values, darwincore_keys, darwincore_values)\n",
+        "                   social_values, astronomy_keys, astronomy_values, biomedical_keys, biomedical_values,\n",
+        "                   journal_keys, journal_values, computationalworkflow_keys, computationalworkflow_values,\n",
+        "                   LocalContextsCVoc_keys, LocalContextsCVoc_values, darwincore_keys, darwincore_values)\n",
+        "\n",
         "    filemetadata(base_url, token, doi, filemetadata_keys, filemetadata_values)\n",
+        "\n",
         "    createreadme(base_url, token, doi, lang,\n",
-        "                      citation_keys, citation_values,\n",
-        "                      geo_keys, geo_values,\n",
-        "                      social_keys, social_values,\n",
-        "                      astronomy_keys, astronomy_values,\n",
-        "                      biomedical_keys, biomedical_values,\n",
-        "                      journal_keys, journal_values,\n",
-        "                      computationalworkflow_keys, computationalworkflow_values,\n",
-        "                      LocalContextsCVoc_keys, LocalContextsCVoc_values, darwincore_keys, darwincore_values,\n",
-        "                      filemetadata_keys, filemetadata_values)\n",
+        "                 citation_keys, citation_values,\n",
+        "                 geo_keys, geo_values,\n",
+        "                 social_keys, social_values,\n",
+        "                 astronomy_keys, astronomy_values,\n",
+        "                 biomedical_keys, biomedical_values,\n",
+        "                 journal_keys, journal_values,\n",
+        "                 computationalworkflow_keys, computationalworkflow_values,\n",
+        "                 LocalContextsCVoc_keys, LocalContextsCVoc_values, darwincore_keys, darwincore_values,\n",
+        "                 filemetadata_keys, filemetadata_values)\n",
         "\n",
-        "    # Construct the correct file path\n",
-        "file_path = os.path.join(f'{doi.replace(\"doi:10.34810/\", \"\")}', 'Readme.txt')\n",
+        "    # Provide download link or button\n",
+        "    file_path = os.path.join(f'{doi.replace(\"doi:10.34810/\", \"\")}', 'Readme.txt')\n",
         "\n",
-        "if IN_COLAB:\n",
-        "    # Running in Google Colab\n",
-        "    # Provide a download button\n",
-        "    download_button = widgets.Button(description=\"Download Readme\")\n",
-        "    display(download_button)\n",
+        "    if IN_COLAB:\n",
+        "        from google.colab import files\n",
+        "        download_button = widgets.Button(description=\"Download Readme\")\n",
+        "        display(download_button)\n",
         "\n",
-        "    # Function to be executed when the download button is clicked\n",
-        "    def on_download_button_click(b):\n",
-        "        # Download the Readme.txt file in Google Colab\n",
-        "        files.download(file_path)\n",
+        "        def on_download_button_click(b):\n",
+        "            files.download(file_path)\n",
         "\n",
-        "    # Event handler for the download button\n",
-        "    download_button.on_click(on_download_button_click)\n",
+        "        download_button.on_click(on_download_button_click)\n",
+        "    else:\n",
+        "        from IPython.display import FileLink\n",
+        "        download_link = FileLink(file_path, result_html_prefix=\"Click to view the Readme: \")\n",
+        "        display(download_link)\n",
         "\n",
-        "else:\n",
-        "    # Running in Jupyter Notebook\n",
-        "    # Provide a download link\n",
-        "    download_link = FileLink(file_path, result_html_prefix=\"Click to view the Readme: \")\n",
-        "    display(download_link)"
+        "# Connect button click to function\n",
+        "confirm_button.on_click(on_confirm_clicked)\n",
+        "\n",
+        "# Display dropdown and button\n",
+        "display(lang_dropdown, confirm_button)"
       ]
     }
   ],
