--- a/create_Readme/create_Readme_script.ipynb
+++ b/create_Readme/create_Readme_script.ipynb
@@ -1141,6 +1141,10 @@
         "            f.write('\\t'+translate_key('File format', lang, dict_type='title')+': '+filemetadata_values[i][filemetadata_keys[i].index('contentType')]+'\\n\\n')\n",
         "        print('The Readme has been created in the directory ' + path +'.')\n",
         "\n",
+        "import ipywidgets as widgets\n",
+        "from IPython.display import display, clear_output, FileLink\n",
+        "import os\n",
+        "\n",
         "# User input widgets\n",
         "lang_dropdown = widgets.Dropdown(\n",
         "    options=['English', 'Spanish', 'Catalan'],\n",
