--- a/create_Readme/create_Readme_script.ipynb
+++ b/create_Readme/create_Readme_script.ipynb
@@ -287,7 +287,7 @@
         "    return extracted_values\n",
         "\n",
         "\n",
-        "def createreadme(base_url, token, doi, language,\n",
+        "def createreadme(base_url, token, doi, lang,\n",
         "                 citation_keys, citation_values,\n",
         "                 geo_keys, geo_values,\n",
         "                 social_keys, social_values,\n",
@@ -1141,11 +1141,12 @@
         "            f.write('\\t'+translate_key('File format', lang, dict_type='title')+': '+filemetadata_values[i][filemetadata_keys[i].index('contentType')]+'\\n\\n')\n",
         "        print('The Readme has been created in the directory ' + path +'.')\n",
         "\n",
+        "# Imports\n",
         "import ipywidgets as widgets\n",
         "from IPython.display import display, clear_output, FileLink\n",
         "import os\n",
-        "\n",
         "# User input widgets\n",
+        "\n",
         "lang_dropdown = widgets.Dropdown(\n",
         "    options=['English', 'Spanish', 'Catalan'],\n",
         "    description='Language:',\n",
@@ -1159,7 +1160,7 @@
         "    clear_output(wait=True)\n",
         "    lang = lang_dropdown.value.lower()\n",
         "    print(f'You selected: {lang}')\n",
-        "\n",
+        "    print('\\n Creating Readme file, wait a moment.')\n",
         "    # Now run the rest of your code here:\n",
         "\n",
         "    if not doi or not token:\n",
