--- a/create_Readme/create_Readme_script.ipynb
+++ b/create_Readme/create_Readme_script.ipynb
@@ -1148,7 +1148,7 @@
         "# User input widgets\n",
         "\n",
         "lang_dropdown = widgets.Dropdown(\n",
-        "    options=['English', 'Spanish', 'Catalan'],\n",
+        "    options=['Catalan','English', 'Spanish'],\n",
         "    description='Language:',\n",
         "    style={'description_width': 'initial'}\n",
         ")\n",
