--- a/change_CSV_delimiter/csv_delimiter_converter.ipynb
+++ b/change_CSV_delimiter/csv_delimiter_converter.ipynb
@@ -59,21 +59,25 @@
         "# Process CSV content: convert ; → , and quote fields with commas\n",
         "def process_csv(byte_content, original_filename):\n",
         "    encoding = detect_encoding(byte_content)\n",
-        "    print(f\"Detected encoding for {original_filename}: {encoding}\")  # Added for debug\n",
+        "    print(f\"Detected encoding for {original_filename}: {encoding}\")  # Debug\n",
+        "\n",
         "    decoded_text = byte_content.decode(encoding, errors='replace')\n",
         "\n",
-        "    lines = decoded_text.splitlines()\n",
+        "    # Use csv.reader to correctly parse quoted fields\n",
+        "    input_io = StringIO(decoded_text)\n",
+        "    reader = csv.reader(input_io, delimiter=';', quotechar='\"')\n",
+        "\n",
         "    output_lines = []\n",
         "\n",
-        "    for line in lines:\n",
-        "        fields = line.strip().split(';')  # only split on ;\n",
+        "    for row in reader:\n",
         "        new_fields = []\n",
         "\n",
-        "        for field in fields:\n",
+        "        for field in row:\n",
         "            field = field.strip()\n",
+        "            # If field contains a comma or a quote, quote it and escape quotes\n",
         "            if ',' in field or '\"' in field:\n",
-        "                field = field.replace('\"', '\"\"')  # escape internal quotes\n",
-        "                field = f'\"{field}\"'  # wrap in quotes\n",
+        "                field = field.replace('\"', '\"\"')\n",
+        "                field = f'\"{field}\"'\n",
         "            new_fields.append(field)\n",
         "\n",
         "        output_lines.append(','.join(new_fields))\n",
@@ -128,7 +132,8 @@
         "Please upload your CSV files using semicolon (;) delimiters.<br>\n",
         "They will be converted to UTF-8, comma-delimited CSV files.<br>\n",
         "Fields with commas will be quoted. Resulting files will be zipped for download.<br>\n",
-        "Excel-compatible: UTF-8 BOM is included to ensure correct display of special characters.\n",
+        "Excel-compatible: UTF-8 BOM is included to ensure correct display of special characters.<br>\n",
+        "Quoted fields will preserve semicolons inside the text correctly.\n",
         "</b></p>\n",
         "\"\"\"))\n",
         "\n",
