--- a/extract_metadata/extract_metadata_script.ipynb
+++ b/extract_metadata/extract_metadata_script.ipynb
@@ -70,7 +70,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title Enter last digits of DOI, API token (<a href='https://dataverse.csuc.cat/dataverseuser.xhtml?selectTab=apiTokenTab' target='_blank'>Get API Token</a>) and the repository URL. Click the &#x25B6; button to execute cell\n",
+        "# @title First click the &#x25B6; button to execute the script. </p> Then, enter the token (If you don't have your API token, you can get it from the following link <a href='https://dataverse.csuc.cat/dataverseuser.xhtml?selectTab=apiTokenTab' target='_blank'>Get API Token</a>).</p> After that, enter the LAST DIGITS of the DOI (for example, if the DOI ends in <strong>dataXYZ</strong>, only write the number <strong>XYZ</strong> ).</p> Finally click <strong>Download</strong> to download the file.\n",
         "import os\n",
         "import subprocess\n",
         "import sys\n",
@@ -111,20 +111,21 @@
         "import pandas as pd\n",
         "\n",
         "# Provide input values\n",
-        "identifier = \"\"  # @param {type:\"string\"}\n",
         "token = \"\"  # @param {type:\"string\"}\n",
+        "identifier = \"\"  # @param {type:\"string\"}\n",
         "base_url = \"https://dataverse.csuc.cat/\"\n",
         "doi = 'doi:10.34810/data'+identifier\n",
         "\n",
         "def extract_value(data_dict):\n",
         "    \"\"\"\n",
-        "    Function to extract type names and values from a JSON metadata dictionary.\n",
+        "    Function to extract all keys and values from a JSON metadata dictionary.\n",
         "\n",
-        "    Args:\n",
-        "    data_dict (dict): JSON metadata dictionary.\n",
+        "    Parameters:\n",
+        "    - data_dict: dict. JSON metadata dictionary.\n",
         "\n",
         "    Returns:\n",
-        "    tuple: Type names and values extracted from the metadata dictionary.\n",
+        "    - type_names: list. List of type names extracted from the metadata.\n",
+        "    - values: list. List of values extracted from the metadata.\n",
         "    \"\"\"\n",
         "    if isinstance(data_dict, dict):\n",
         "        type_names = []\n",
@@ -160,115 +161,102 @@
         "    else:\n",
         "        return [], []\n",
         "\n",
-        "def export_metadata(base_url, token, doi, citation_keys, citation_values, geo_keys, geo_values, social_keys,\n",
-        "                    social_values, astronomy_keys, astronomy_values, biomedical_keys, biomedical_values,\n",
-        "                    journal_keys, journal_values):\n",
+        "def exportmetadata(base_url, token, doi,\n",
+        "                   citation_keys, citation_values,\n",
+        "                   geo_keys, geo_values,\n",
+        "                   social_keys, social_values,\n",
+        "                   astronomy_keys, astronomy_values,\n",
+        "                   biomedical_keys, biomedical_values,\n",
+        "                   journal_keys, journal_values,\n",
+        "                   computationalworkflow_keys, computationalworkflow_values,\n",
+        "                   LocalContextsCVoc_keys, LocalContextsCVoc_values,\n",
+        "                   darwincore_keys, darwincore_values):\n",
         "    \"\"\"\n",
-        "    Function to export metadata from a dataset and store it in respective lists.\n",
+        "    Export metadata from a Dataverse dataset using its DOI.\n",
         "\n",
-        "    Args:\n",
-        "    base_url (str): Base URL of the Dataverse repository.\n",
-        "    token (str): API token for authentication.\n",
-        "    doi (str): DOI of the dataset.\n",
-        "    citation_keys (list): List to store citation metadata keys.\n",
-        "    citation_values (list): List to store citation metadata values.\n",
-        "    geo_keys (list): List to store geospatial metadata keys.\n",
-        "    geo_values (list): List to store geospatial metadata values.\n",
-        "    social_keys (list): List to store social science metadata keys.\n",
-        "    social_values (list): List to store social science metadata values.\n",
-        "    astronomy_keys (list): List to store astronomy metadata keys.\n",
-        "    astronomy_values (list): List to store astronomy metadata values.\n",
-        "    biomedical_keys (list): List to store biomedical metadata keys.\n",
-        "    biomedical_values (list): List to store biomedical metadata values.\n",
-        "    journal_keys (list): List to store journal metadata keys.\n",
-        "    journal_values (list): List to store journal metadata values.\n",
+        "    Parameters:\n",
+        "        (same as original, see above)\n",
         "\n",
         "    Returns:\n",
-        "    None\n",
+        "        None. Populates provided lists with extracted metadata.\n",
         "    \"\"\"\n",
         "    from pyDataverse.api import NativeApi, DataAccessApi\n",
-        "    from pyDataverse.models import Dataverse\n",
-        "    api = NativeApi(base_url, token)  # Function to access the API\n",
-        "    data_api = DataAccessApi(base_url, token)  # Function to access data via the API\n",
-        "    try:\n",
-        "        dataset = api.get_dataset(doi)  # Retrieve dataset metadata\n",
-        "        if 'citation' in dataset.json()['data']['latestVersion']['metadataBlocks']:\n",
-        "            metadata_citation = dataset.json()['data']['latestVersion']['metadataBlocks']['citation']['fields']\n",
-        "            citation = extract_value(metadata_citation)\n",
-        "            citation_keys.extend(citation[0])\n",
-        "            citation_values.extend(citation[1])\n",
-        "            for item in metadata_citation:\n",
-        "                if isinstance(item['value'], str):\n",
-        "                    index_change = citation_keys.index(item['typeName'])\n",
-        "                    citation_values[index_change] = item['value']\n",
-        "        if 'geospatial' in dataset.json()['data']['latestVersion']['metadataBlocks']:\n",
-        "            metadata_geospatial = dataset.json()['data']['latestVersion']['metadataBlocks']['geospatial']['fields']\n",
-        "            geospatial = extract_value(metadata_geospatial)\n",
-        "            geo_keys.extend(geospatial[0])\n",
-        "            geo_values.extend(geospatial[1])\n",
-        "            for item in metadata_geospatial:\n",
-        "                if isinstance(item['value'], str):\n",
-        "                    index_change = geo_keys.index(item['typeName'])\n",
-        "                    geo_values[index_change] = item['value']\n",
-        "        if 'socialscience' in dataset.json()['data']['latestVersion']['metadataBlocks']:\n",
-        "            metadata_socialscience = dataset.json()['data']['latestVersion']['metadataBlocks']['socialscience']['fields']\n",
-        "            socialscience = extract_value(metadata_socialscience)\n",
-        "            social_keys.extend(socialscience[0])\n",
-        "            social_values.extend(socialscience[1])\n",
-        "            for item in metadata_socialscience:\n",
-        "                if isinstance(item['value'], str):\n",
-        "                    index_change = social_keys.index(item['typeName'])\n",
-        "                    social_values[index_change] = item['value']\n",
-        "        if 'astrophysics' in dataset.json()['data']['latestVersion']['metadataBlocks']:\n",
-        "            metadata_astrophysics = dataset.json()['data']['latestVersion']['metadataBlocks']['astrophysics']['fields']\n",
-        "            astrophysics = extract_value(metadata_astrophysics)\n",
-        "            astronomy_keys.extend(astrophysics[0])\n",
-        "            astronomy_values.extend(astrophysics[1])\n",
-        "            for item in metadata_astrophysics:\n",
-        "                if isinstance(item['value'], str):\n",
-        "                    index_change = astronomy_keys.index(item['typeName'])\n",
-        "                    astronomy_values[index_change] = item['value']\n",
-        "        if 'biomedical' in dataset.json()['data']['latestVersion']['metadataBlocks']:\n",
-        "            metadata_biomedical = dataset.json()['data']['latestVersion']['metadataBlocks']['biomedical']['fields']\n",
-        "            biomedical = extract_value(metadata_biomedical)\n",
-        "            biomedical_keys.extend(biomedical[0])\n",
-        "            biomedical_values.extend(biomedical[1])\n",
-        "            for item in metadata_biomedical:\n",
-        "                if isinstance(item['value'], str):\n",
-        "                    index_change = biomedical_keys.index(item['typeName'])\n",
-        "                    biomedical_values[index_change] = item['value']\n",
-        "        if 'journal' in dataset.json()['data']['latestVersion']['metadataBlocks']:\n",
-        "            metadata_journal = dataset.json()['data']['latestVersion']['metadataBlocks']['journal']['fields']\n",
-        "            journal = extract_value(metadata_journal)\n",
-        "            journal_keys.extend(journal[0])\n",
-        "            journal_values.extend(journal[1])\n",
-        "            for item in metadata_journal:\n",
-        "                if isinstance(item['value'], str):\n",
-        "                    index_change = journal_keys.index(item['typeName'])\n",
-        "                    journal_values[index_change] = item['value']\n",
-        "    except (KeyError, InvalidSchema) as e:\n",
-        "        print(f\"Error occurred: {e}\")\n",
-        "        print('There was an error reading metadata for the dataset: ' + doi)\n",
+        "    import os\n",
         "\n",
-        "def extract_metadata(data,citation_keys,citation_values,geo_keys,geo_values,social_keys,social_values,astronomy_keys,astronomy_values,biomedical_keys,biomedical_values,journal_keys,journal_values):\n",
-        "    for key, value in zip(citation_keys, citation_values):\n",
-        "        if not isinstance(value, dict):\n",
-        "            data.append([key, value])\n",
-        "    for key, value in zip(geo_keys, geo_values):\n",
-        "        if not isinstance(value, dict):\n",
-        "            data.append([key, value])\n",
-        "    for key, value in zip(social_keys, social_values):\n",
-        "        if not isinstance(value, dict):\n",
-        "            data.append([key, value])\n",
-        "    for key, value in zip(astronomy_keys, astronomy_values):\n",
-        "        if not isinstance(value, dict):\n",
-        "            data.append([key, value])\n",
-        "    for key, value in zip(biomedical_keys, biomedical_values):\n",
-        "        if not isinstance(value, dict):\n",
-        "            data.append([key, value])\n",
-        "    for key, value in zip(journal_keys, journal_values):\n",
-        "        if not isinstance(value, dict):\n",
-        "            data.append([key, value])\n",
+        "    api = NativeApi(base_url, token)\n",
+        "\n",
+        "    # Metadata blocks mapping: (block_name, keys_list, values_list)\n",
+        "    metadata_blocks = [\n",
+        "        (\"citation\", citation_keys, citation_values),\n",
+        "        (\"geospatial\", geo_keys, geo_values),\n",
+        "        (\"socialscience\", social_keys, social_values),\n",
+        "        (\"astrophysics\", astronomy_keys, astronomy_values),\n",
+        "        (\"biomedical\", biomedical_keys, biomedical_values),\n",
+        "        (\"journal\", journal_keys, journal_values),\n",
+        "        (\"computationalworkflow\", computationalworkflow_keys, computationalworkflow_values),\n",
+        "        (\"LocalContextsCVoc\", LocalContextsCVoc_keys, LocalContextsCVoc_values),\n",
+        "        (\"darwincore\", darwincore_keys, darwincore_values)\n",
+        "    ]\n",
+        "\n",
+        "    try:\n",
+        "        dataset = api.get_dataset(doi)\n",
+        "        metadata = dataset.json()['data']['latestVersion']['metadataBlocks']\n",
+        "\n",
+        "        for block_name, keys_list, values_list in metadata_blocks:\n",
+        "            if block_name in metadata:\n",
+        "                fields = metadata[block_name]['fields']\n",
+        "                extracted_keys, extracted_values = extract_value(fields)\n",
+        "                keys_list.extend(extracted_keys)\n",
+        "                values_list.extend(extracted_values)\n",
+        "                for item in fields:\n",
+        "                    if isinstance(item['value'], str):\n",
+        "                        try:\n",
+        "                            index = keys_list.index(item['typeName'])\n",
+        "                            values_list[index] = item['value']\n",
+        "                        except ValueError:\n",
+        "                            pass  # typeName wasn't added by extract_value\n",
+        "\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error exporting metadata for DOI {doi}: {e}\")\n",
+        "\n",
+        "def extract_metadata(data,\n",
+        "                     citation_keys, citation_values,\n",
+        "                     geo_keys, geo_values,\n",
+        "                     social_keys, social_values,\n",
+        "                     astronomy_keys, astronomy_values,\n",
+        "                     biomedical_keys, biomedical_values,\n",
+        "                     journal_keys, journal_values,\n",
+        "                     computationalworkflow_keys, computationalworkflow_values,\n",
+        "                     LocalContextsCVoc_keys, LocalContextsCVoc_values,\n",
+        "                     darwincore_keys, darwincore_values,\n",
+        "                     flatten_dicts=False):\n",
+        "    \"\"\"\n",
+        "    Extracts metadata key-value pairs and appends to `data`.\n",
+        "    If `flatten_dicts` is True, nested dictionaries are flattened into separate key-value pairs.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    metadata_blocks = [\n",
+        "        (citation_keys, citation_values),\n",
+        "        (geo_keys, geo_values),\n",
+        "        (social_keys, social_values),\n",
+        "        (astronomy_keys, astronomy_values),\n",
+        "        (biomedical_keys, biomedical_values),\n",
+        "        (journal_keys, journal_values),\n",
+        "        (computationalworkflow_keys, computationalworkflow_values),\n",
+        "        (LocalContextsCVoc_keys, LocalContextsCVoc_values),\n",
+        "        (darwincore_keys, darwincore_values),\n",
+        "    ]\n",
+        "\n",
+        "    for keys, values in metadata_blocks:\n",
+        "        for key, value in zip(keys, values):\n",
+        "            if isinstance(value, dict) and flatten_dicts:\n",
+        "                # Flatten nested dict (optional)\n",
+        "                for sub_key, sub_value in value.items():\n",
+        "                    flat_key = f\"{key}.{sub_key}\"\n",
+        "                    data.append([flat_key, sub_value])\n",
+        "            elif not isinstance(value, dict):\n",
+        "                data.append([key, value])\n",
+        "\n",
         "\n",
         "# Checking if both DOI and token are provided\n",
         "if not doi or not token:\n",
@@ -282,17 +270,27 @@
         "    # Getting dataset metadata\n",
         "    dataset = api.get_dataset(doi)\n",
         "    # Lists for metadata\n",
-        "    citation_keys, geo_keys, social_keys, astronomy_keys, biomedical_keys, journal_keys = [[] for _ in range(6)]\n",
-        "    citation_values, geo_values, social_values, astronomy_values, biomedical_values, journal_values = [[] for _ in range(6)]\n",
-        "    data = []\n",
+        "    citation_keys, geo_keys, social_keys, astronomy_keys, biomedical_keys, journal_keys, computationalworkflow_keys, LocalContextsCVoc_keys, darwincore_keys  = [[] for _ in range(9)]\n",
+        "    citation_values, geo_values, social_values, astronomy_values, biomedical_values, journal_values, computationalworkflow_values, LocalContextsCVoc_values, darwincore_values = [[] for _ in range(9)]\n",
+        "    data=[]\n",
         "    # Exporting metadata\n",
-        "    export_metadata(base_url, token, doi, citation_keys, citation_values, geo_keys, geo_values, social_keys,\n",
-        "                   social_values, astronomy_keys, astronomy_values, biomedical_keys, biomedical_values,\n",
-        "                   journal_keys, journal_values)\n",
-        "    # Extracting metadata and arranging it\n",
-        "    extract_metadata(data, citation_keys, citation_values, geo_keys, geo_values, social_keys, social_values,\n",
-        "                     astronomy_keys, astronomy_values, biomedical_keys, biomedical_values, journal_keys,\n",
-        "                     journal_values)\n",
+        "    exportmetadata(base_url, token, doi, citation_keys, citation_values, geo_keys, geo_values, social_keys,\n",
+        "                      social_values, astronomy_keys, astronomy_values, biomedical_keys, biomedical_values,\n",
+        "                      journal_keys, journal_values,computationalworkflow_keys, computationalworkflow_values,\n",
+        "                      LocalContextsCVoc_keys, LocalContextsCVoc_values, darwincore_keys, darwincore_values)\n",
+        "    extract_metadata(\n",
+        "                      data,\n",
+        "                      citation_keys, citation_values,\n",
+        "                      geo_keys, geo_values,\n",
+        "                      social_keys, social_values,\n",
+        "                      astronomy_keys, astronomy_values,\n",
+        "                      biomedical_keys, biomedical_values,\n",
+        "                      journal_keys, journal_values,\n",
+        "                      computationalworkflow_keys, computationalworkflow_values,\n",
+        "                      LocalContextsCVoc_keys, LocalContextsCVoc_values,\n",
+        "                      darwincore_keys, darwincore_values,\n",
+        "                      flatten_dicts=False  # Optional: True to flatten nested dicts\n",
+        "                  )\n",
         "    # Creating a DataFrame\n",
         "    df = pd.DataFrame(data, columns=['Metadata', 'Value'])\n",
         "\n",
