--- a/verification_readme/verification_readme_script.ipynb
+++ b/verification_readme/verification_readme_script.ipynb
@@ -381,7 +381,7 @@
         "df['Readme file name'] = df['Readme file name'].astype(str).str.strip(\"[]\").str.replace(\"'\", \"\", regex=False)\n",
         "from google.colab import files\n",
         "# Save the DataFrame to an Excel file\n",
-        "excel_filename = 'datasets_sizes.xlsx'\n",
+        "excel_filename = 'datasets_readme_verification.xlsx'\n",
         "df.to_excel(excel_filename, index=False)\n",
         "\n",
         "# Display the DataFrame\n",
