Actualitzación con Colab

--- a/REVISAT/REVISAT_script.ipynb
+++ b/REVISAT/REVISAT_script.ipynb
@@ -34,7 +34,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title Introduir últims digits del DOI, el token (<a href='https://dataverse.csuc.cat/dataverseuser.xhtml?selectTab=apiTokenTab' target='_blank'>Get API Token</a>) i el nom complet de la institució. Clicar botó d'executar cel·la &#x25B6;\n",
+        "# @title First enter the token (If you don't have your API token, you can get it from the following link <a href='https://dataverse.csuc.cat/dataverseuser.xhtml?selectTab=apiTokenTab' target='_blank'>Get API Token</a>).</p> After that, enter the LAST DIGITS of the DOI (for example, if the DOI ends in <strong>dataXYZ</strong>, only write the number <strong>XYZ</strong> ).</p> Finally, click the &#x25B6; button to execute the script.\n",
         "import os\n",
         "import subprocess\n",
         "import sys\n",
@@ -69,6 +69,9 @@
         "except ImportError:\n",
         "    IN_COLAB = False\n",
         "\n",
+        "from google.colab import output\n",
+        "import ipywidgets as widgets\n",
+        "from IPython.display import display, HTML, clear_output\n",
         "\n",
         "from datetime import date\n",
         "from pyDataverse.api import NativeApi, DataAccessApi\n",
@@ -84,7 +87,7 @@
         "identifier = \"\"  # @param {type:\"string\"}\n",
         "token = \"\"  # @param {type:\"string\"}\n",
         "driver = None ## triar (webdriver.Chrome(), webdriver.Firefox() or None) per evaluar el daset a F-uji. Trieu None si useu l'script a Colab.\n",
-        "doi = identifier\n",
+        "doi = 'doi:10.34810/data'+identifier\n",
         "\n",
         "#Choose an institution\n",
         "institucions = [\n",
