--- a/transform_excel/transform_excel.ipynb
+++ b/transform_excel/transform_excel.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/CSUC/RDR-scripts/blob/main/transform_excel/transform_excel.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -109,7 +120,7 @@
         "    for i, table in enumerate(tables):\n",
         "        table_df = pd.DataFrame(table)\n",
         "        csv_file = f\"{sheet_name}_{i+1}.csv\"\n",
-        "        table_df.to_csv(csv_file, index=False, header=False)  # Disable header\n",
+        "        table_df.to_csv(csv_file, index=False, header=False, encoding='utf-8-sig')  # Disable header\n",
         "        csv_files.append(csv_file)\n",
         "\n",
         "    return csv_files\n",
@@ -172,7 +183,7 @@
         "            csv_files = detect_and_save_tables(sheet_name, df)\n",
         "        else:\n",
         "            csv_file = f\"{sheet_name}.csv\"\n",
-        "            df.to_csv(csv_file, index=False, header=False)  # Disable header\n",
+        "            df.to_csv(csv_file, index=False, header=False, encoding='utf-8-sig')  # Disable header\n",
         "            csv_files = [csv_file]\n",
         "\n",
         "        # Move CSV files to directory\n",
